# lebnaese_reg

./: .gitignore  MANIFEST.in  README.md  fix_installation.py  package.json  pyproject.toml  setup.py  setup.py.old  webpack.config.js
lebanese_regulations/: auth.py  hooks.py  install.py  modules.txt  notifications.py  permissions.py  uninstall.py
lebanese_regulations/accounting/: __init__.py  events.py  tasks.py  utils.py
lebanese_regulations/compliance/: utils.py
lebanese_regulations/config/: desktop.py
lebanese_regulations/docs/: user_guide.md
lebanese_regulations/doctype/lebanese_audit_checklist/: lebanese_audit_checklist.js  lebanese_audit_checklist.json  lebanese_audit_checklist.py  lebanese_audit_checklist_dashboard.html
lebanese_regulations/doctype/lebanese_audit_checklist_item/: lebanese_audit_checklist_item.json
lebanese_regulations/overrides/: __init__.py  payroll_entry.py  salary_slip.py
lebanese_regulations/payroll/: overrides.py  tasks.py  utils.py
lebanese_regulations/public/css/: lebanese_regulations.css  lebanese_regulations_web.css
lebanese_regulations/public/js/: account_tree.js  company.js  currency_exchange_list.js  employee.js  general_ledger.js  index.js  lebanese_audit_checklist_list.js  lebanese_regulations.bundle.js  lebanese_regulations.js  lebanese_regulations_web.js  payroll_entry.js  payroll_entry_calendar.js  purchase_invoice.js  salary_slip.js  salary_slip_list.js  salary_structure.js  sales_invoice.js
lebanese_regulations/regional/lebanon/: taxes.py
lebanese_regulations/setup/: __init__.py  custom_fields.py  events.py
lebanese_regulations/translations/: ar.csv
lebanese_regulations/utils/: after_job.py  after_request.py  before_job.py  before_request.py  jinja_methods.py
(+5 files in other folders)
