[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lebanese_regulations"
version = "0.1.0"
description = "Adapt ERPNext for Lebanese compliance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ali H. Fakih", email = "info@kiwinmore.com"}
]
dependencies = [
    "frappe",
    "erpnext",
    "hrms"
]

[tool.bench]
app_name = "lebanese_regulations"
skip_build_assets = true
disable_asset_building = true  # Completely disable asset processing

[tool.bench.dev-dependencies]
frappe = "~15.0.0"
erpnext = "~15.0.0"
hrms = "~15.0.0"